--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-markdown": "^9.0.3"
   },
   "devDependencies": {
+    "@types/node": "22.13.1",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.7.3"
   }
 }
